[gd_scene load_steps=10 format=3 uid="uid://ckcml7xh0hgn1"]

[ext_resource type="Script" path="res://src/models/characters/enemies/enemy.gd" id="1_bu3db"]
[ext_resource type="Texture2D" uid="uid://c3hywkueaw0jm" path="res://assets/images/enemy/enemy1-Sheet.png" id="2_y55wi"]
[ext_resource type="PackedScene" uid="uid://d12ayjq61qdvy" path="res://src/components/player_area_detection/player_detection_zone.tscn" id="3_0c40r"]

[sub_resource type="AtlasTexture" id="AtlasTexture_e8jcc"]
atlas = ExtResource("2_y55wi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_6ar7n"]
atlas = ExtResource("2_y55wi")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ujwtd"]
atlas = ExtResource("2_y55wi")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_s5xf6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e8jcc")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6ar7n")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ujwtd")
}],
"loop": true,
"name": &"Walk",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_h4keb"]
radius = 8.0

[sub_resource type="CircleShape2D" id="CircleShape2D_63l6n"]
radius = 192.167

[node name="Enemy" type="CharacterBody2D"]
collision_layer = 4
script = ExtResource("1_bu3db")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_s5xf6")
animation = &"Idle"
autoplay = "Idle"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
position = Vector2(0, 8)
shape = SubResource("CircleShape2D_h4keb")

[node name="PlayerDetectionZone" parent="." instance=ExtResource("3_0c40r")]
visible = false

[node name="CollisionShape2D" parent="PlayerDetectionZone" index="0"]
shape = SubResource("CircleShape2D_63l6n")
debug_color = Color(0, 0.6, 0.701961, 0.0392157)

[node name="EnemyRayCast2D" type="RayCast2D" parent="."]
visible = false
self_modulate = Color(0, 1, 0, 1)

[node name="Navigation" type="Node2D" parent="."]

[node name="NavigationAgent2D" type="NavigationAgent2D" parent="Navigation"]
debug_enabled = true

[node name="UpdateNavigationTimer" type="Timer" parent="Navigation"]
wait_time = 0.1
autostart = true

[connection signal="timeout" from="Navigation/UpdateNavigationTimer" to="." method="_on_update_navigation_timer_timeout"]

[editable path="PlayerDetectionZone"]
